<resources>
    <string name="app_name">Fudge</string>
    <string name="title_shoppinglist">Shopping list</string>
    <string name="title_inventorylist">Inventory list</string>
    <string name="title_addproducts">Add products</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="content_description_favorite_recipe">Content Description Favorite Recipe</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="content_description_more">Content Description More</string>
    <string name="favorite_recipe">Favorite recipes</string>
    <string name="user_profile">Profile</string>
    <string name="content_description_user_profile">Content Description User Profile</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_recipe">Recipes</string>
    <string name="search_hint">Please enter a search word.</string>
    <string name="login_activity_title">Login</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="tobuyproductstitle">Products to buy</string>
    <string name="lastboughtproductstitle">Last bought products</string>
    <string name="edittext_addnewproducttitle">New product</string>
    <string name="edittext_addnewproductquantity">Amount</string>
    <string name="button_addProduct">Add product</string>
    <string name="addnewproducttoshoppinglistlabel">What do you want to buy?</string>
    <string name="AddButtonShoppinglist">Create new Product</string>
    <string name="add_product_to_shoppinglist">Add</string>
    <string name="numberonerecipelisttitle"># one recipes today</string>
    <string name="expiring_product_list_title">Expiring products</string>
    <string name="dashboard_show_more">More</string>
    <string name="dashboard_greeting_user">Hi,</string>
    <string name="dashboard_user_name">James</string>
    <string name="dashboard_favorite_recipes">Favorites recipes</string>
    <string name="dashboard_recipe_simple">simple</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_login">Login</string>
    <string name="want_to_logout">Do you want to log out?</string>
    <string name="profile_forgot_password">Forgot password?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">This is not a valid username</string>
    <string name="invalid_email">This is not a valid email-address.</string>
    <string name="invalid_password">The password should contain >5 characters.</string>
    <string name="invalid_passwords">Passwords do not match.</string>
    <string name="login_failed">"Login failed."</string>
    <string name="register_failed">"Register failed."</string>
    <string name="register_title">Registration</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_hint">******</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="logout">Logout</string>
    <string name="dummy_text_email">email@gmail.com</string>
    <string name="dummy_text_lastname">Lastname</string>
    <string name="dummy_text_firstname">Firstname</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="have_account">You already have an account?</string>
    <string name="reset_password">Reset password</string>
    <string name="back_to_login">Back to login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="productimage">Product image</string>
    <string name="product_information">Product informations</string>
    <string name="expires_in">Expires in:</string>
    <string name="expiration_dummy_value">3 Days</string>
    <string name="expiration_dummy_product_name">Frozen pasta</string>
    <string name="add_new_product_to_inventory">Add new product to inventory</string>
    <string name="add_new_inventory">Add product</string>
    <string name="edit_products">Edit product</string>
    <string name="button_edit_product">Edit product</string>
    <string name="content_description_edit_product">Edit product</string>
    <string name="scan_product_code">Scan barcode</string>
    <string name="add_new_product">Create a new product</string>
    <string name="expiration_date">Expiration date</string>
    <string name="hint_hersteller">Manufacturer</string>
    <string name="product_name">Product name</string>
    <string name="product_type">Product type</string>
    <string name="button_inventory_list_edit_product">Edit product</string>
    <string name="inventory_list_add_new_product">Create new product</string>
    <string name="inventory_list_product_expiration_date">Expiration date</string>
    <string name="inventory_list_product_name">Product name</string>
    <string name="inventory_list_product_type">Product type</string>
    <string name="add_product_image_text">Would you like to add a profile picture?</string>
    <string name="dietry_tag_label">Label</string>
    <string name="edit_text_error_productname_not_empty">Product name cannot be empty!</string>
    <string name="edit_text_error_product_quantity_not_empty">Product amount cannot be empty!</string>
    <string name="button_add_image_to_product">Add product image</string>
    <string name="vegan_pizza">Vegan pizza</string>
    <string name="_1_piece">1 piece</string>
    <string name="vegan">Vegan</string>
    <string name="buddha_bowl">Buddha Bowl</string>
    <string name="inventory_product_rating_amount">4.5</string>
    <string name="dropDownProductTypeText">Please select a product type from the dropdown list.</string>
    <string name="choose_producttype">Select product type</string>
    <string name="amount">Amount</string>
    <string name="nutritionvalues">Nutrition values</string>
    <string name="show_more_items">Show more</string>
    <string name="create_new_product">Create new product</string>
    <string name="pizza">Pizza</string>
    <string name="_3">3</string>
    <string name="food_dummy_image">Dummy image</string>
    <string name="show_more">More</string>
    <string name="exp_date">22.02.2022</string>
    <string name="expires_soon">expires soon</string>
    <string name="button_add_new_product">Add new product to inventory</string>
    <string name="recipe_filter">My recipe filters</string>
    <string name="profile_settings">Profile settings</string>
    <string name="allow_pushNotifications">Allow push notifications</string>
    <string name="e_mail_title">Email:</string>
    <string name="password">Password</string>
    <string name="password_string">*******</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_food_preferences_to_user_profile">Add new diet preferences</string>
    <string name="user_profile_allow_push_not">Allow push notifications</string>
    <string name="user_profile_edit">Edit profile</string>
    <string name="user_profile_first_name">Firstname</string>
    <string name="user_profile_sir_name">Lastname</string>
    <string name="notificationTitle">Expiring products in inventory</string>
    <string name="notificationText">You have expiring products in your inventory!</string>
    <string name="recipe_detail_image">Recipe detail picture</string>
    <string name="recipe_detail_information">Recipe information</string>
    <string name="recipe_detail_rating">Rating</string>
    <string name="recipe_ingredient_text">Fresh Bee Honey</string>
    <string name="recipe_ingredient_amount">5 teaspoon</string>
    <string name="recipe_ingredient_available">available</string>
    <string name="button_share_ingredients">Add to</string>
    <string name="add_to_shoppinglist_title">Do you want to add missing ingredients to your shopping list?</string>
    <string name="Available">avlb</string>
    <string name="NotAvailable">not avlb</string>
    <string name="simpel">simple</string>
    <string name="export_ingredients_to_shoppinglist">Export missing ingredients to shopping list</string>
    <string name="export_ingredients">Export ingredients</string>
    <string name="best_voted_recipes">Favorite recipes</string>
    <string name="cooking_instructions">Cooking Instructions</string>
    <string name="example_sentence">The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.</string>
    <string name="needed_ingredients_title">Ingredients</string>
    <string name="example_description">Vegetarian</string>
    <string name="rate_recipe">Rating</string>
    <string name="rating_value">4.5</string>
    <string name="dummy_text">5.0</string>
    <string name="dummy_text_min">30 min.</string>
    <string name="dummy_text_kcal">128 kcal</string>
    <string name="Product_details">Product details</string>
    <string name="recipe_details">Recipe details</string>
    <string name="ok">OK</string>
</resources>