<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobilesystems.feedme.MainActivity"
    android:iconTint="@color/white">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/user_profile"
        android:icon="@drawable/ic_baseline_person_24_white"
        android:iconTint="@color/white"
        android:title="@string/user_profile"
        android:contentDescription="@string/content_description_user_profile"
        app:showAsAction="ifRoom" />

    <!-- Future functionality -->
    <item
        android:id="@+id/favorite_recipes"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_recipe"
        android:contentDescription="@string/content_description_favorite_recipe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:contentDescription="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/dashboard_show_more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>